<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/imgAvatar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/Pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pages"/>
        <TextView
            android:id="@+id/Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
        <TextView
            android:id="@+id/Prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="prev"/>
        <TextView
            android:id="@+id/ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"/>
        <TextView
            android:id="@+id/NameChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namechar"/>
        <TextView
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"/>
        <TextView
            android:id="@+id/Species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species"/>
        <TextView
            android:id="@+id/Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"/>
        <TextView
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <TextView
            android:id="@+id/NameOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameorigin"/>
        <TextView
            android:id="@+id/UrlOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UrlOrigin"/>
        <TextView
            android:id="@+id/NameLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namelocation"/>
        <TextView
            android:id="@+id/UrlLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urllocation"/>
        <TextView
            android:id="@+id/UrlChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urlchar"/>
        <TextView
            android:id="@+id/Created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created"/>

    </LinearLayout>
</RelativeLayout>