<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RickId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="381dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/imgAvatar"
            android:orientation="vertical">


            <TextView
                android:id="@+id/ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <TextView
                android:id="@+id/NameChar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namechar" />

            <TextView
                android:id="@+id/Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:id="@+id/Species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/species" />

            <TextView
                android:id="@+id/Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:id="@+id/Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/NameOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameorigin" />

            <TextView
                android:id="@+id/UrlOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UrlOrigin" />

            <TextView
                android:id="@+id/NameLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namelocation" />

            <TextView
                android:id="@+id/UrlLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urllocation" />

            <TextView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="image" />

            <TextView
                android:id="@+id/episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Episode" />

            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="url" />

            <TextView
                android:id="@+id/Created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created" />

        </LinearLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>